# aether-mind-v3

./: .gitignore  APK_BRIEF.md  BUILD_GUIDE.md  README.md  build_apk.sh  deploy_tool.py  gradle.properties  gradlew  settings.gradle  test_api_auto.py
.circleci/: config.yml
.github/: WORKFLOW_TEST.md
.github/workflows/: android.yml  build-apk.yml  build_apk.yml  ethereal_brain.yml
Aether/: .gitignore  README.md  gradlew
Aether/app/: build.gradle  proguard-rules.pro
Aether/app/src/main/jni/: CMakeLists.txt
Aether/app/src/main/jni/brain/: physics_engine.h
Aether/app/src/main/jni/core/: agent.cpp  agent.h  jni_bridge.cpp
aether_shot/: adaptive.py  serverless.py
android/: AndroidManifest.xml  apk_builder.py  apk_builder_v2.py  apk_builder_v3.py  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/build_standalone/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  frame_capture.h  jni_bridge.cpp  libhardware_service.cpp  vulkan_renderer.h
app/: build.gradle
app/src/main/jni/: CMakeLists.txt  CMakeLists.txt.v4.backup
app/src/main/jni/brain/: brain.h  physics_engine.h
app/src/main/jni/core/: agent.cpp  agent.h  jni_bridge.cpp
capture/: frame_capture.py
config/: api_keys.json
docs/: AETHER_MIND_v3_Architecture.md  NEXUS_PLAN.md  SYSTEM_ARCHITECTURE_LOCKED.md  TEAM_MISSION_BRIEF.md  WORKFLOW_SKILL.md  flagship_benchmarks.json  model_recommendations.json  model_registry.json  unified_model_registry.json
gradle/wrapper/: gradle-wrapper.properties
lock/: state.json
neural/: human_touch.py  neural_core.py  oracle.py  pool_simulator.py  quick_test.py  smoke_test.py  train_pipeline.py  verify_arch.py  verify_architecture.py
neural/models/: architecture_verification.json  oracle_state.json  test_results.json
orchestrator/: config_loader.py  dashscope_client.py  discover_models.py  flagship_scanner.py  orchestrator.py  unified_model_registry.py
physics/: engine.py  physics_mirror.py
project/: v3_planning_prompt.json
stealth/: camouflage_system.py  quantum_stealth.py  stealth_layer.py
tests/: integration_test.py
(+44 files in other folders)
